# nonepad

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app_context.rs  bottom_panel.rs  caret.rs  carret.rs  commands.rs  dialog.rs  editor_view.rs  file.rs  main.rs  position.rs  rope_utils.rs  seticon.rs  syntax.rs  text_buffer.rs  text_layout_helper.rs  theme.rs
src/text_buffer/: buffer.rs  caret.rs  edit_stack.rs  file.rs  mod.rs  position.rs  rope_utils.rs
src/themes/: mariana.json
src/widgets/: bottom_panel.rs  editor_view.rs  empty.rs  extension.rs  mod.rs  palette_list.rs  palette_view.rs  view_switcher.rs  window.rs
src/widgets/text_buffer/: buffer.rs  edit_stack.rs  file.rs  mod.rs  position.rs  rope_utils.rs  syntax.rs
vscodetheme/: Cargo.toml
vscodetheme/src/: lib.rs
vscodetheme/src/themes/: mariana.json
