[package]
name = "nonepad"
version = "0.1.0"
authors = ["Mathieu PEPONAS <m.peponas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.5"
ropey = "1.1.0"
unicode-segmentation = "1.6.0"
chardetng = "0.1.3"
encoding_rs = "0.8.17"
anyhow = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[target.'cfg(target_os="windows")'.dependencies]
winapi = "0.3"
