[package]
name = "nonepad"
version = "0.1.0"
authors = ["Mathieu PEPONAS <m.peponas@gmail.com>"]
edition = "2018"
build = "build.rs"

[features]
noconsole = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
druid = { git = "https://github.com/linebender/druid", features = ["im"] }
#druid = { path  = "../druid/druid" }
ropey = "1.2"
unicode-segmentation = "1.6.0"
chardetng = "0.1.3"
encoding_rs = "0.8.17"
anyhow = "1.0"
uuid = { version = "0.8", features = ["v4"] }
rfd = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.8"
syntect = "4.5"
sublime_fuzzy = "0.7.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"  