[package]
name = "nonepad-vscodetheme"
version = "0.1.0"
edition = "2021"
license = "Apache License 2.0"
description = "Helper vscode theme library for nonepad"
homepage = "https://github.com/pepone42/nonepad"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"